--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.2) bionic; urgency=medium
+
+  * Changed adm group by sudo 
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 05 Mar 2019 17:41:26 +0100
+
 lliurex-shutdowner (1.1) bionic; urgency=medium
 
   * Adaptation of the gui to the new style
