--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.3) bionic; urgency=medium
+
+  * Added sudo group in login function
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 14 May 2019 13:06:08 +0200
+
 lliurex-shutdowner (1.2) bionic; urgency=medium
 
   * Changed adm group by sudo 
