--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.4) bionic; urgency=medium
+
+  * Fixed css file and changed icon
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 13 Jun 2019 11:57:55 +0200
+
 lliurex-shutdowner (1.3) bionic; urgency=medium
 
   * Added sudo group in login function
