--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.6) bionic; urgency=medium
+
+  * Fixed login window
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 04 Jul 2019 12:14:59 +0200
+
 lliurex-shutdowner (1.5) bionic; urgency=medium
 
   * Fixed valencian translations
