--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.6.2) bionic; urgency=medium
+
+  * Added valencian translations
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 30 Jul 2019 10:33:27 +0200
+
 lliurex-shutdowner (1.6.1) bionic; urgency=medium
 
   * Non-maintainer upload.
