--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.7.1) bionic; urgency=medium
+
+  * Gui controls are disabled when launching if cron setting is disabled.
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Fri, 23 Aug 2019 09:16:11 +0200
+
 lliurex-shutdowner (1.7) bionic; urgency=medium
 
   * Remade shutdown script. Should be easier to maintain and understand.
