--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.8.1) bionic; urgency=medium
+
+  * Fixed empty list when not in standalone mode
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Mon, 09 Sep 2019 09:38:46 +0200
+
 lliurex-shutdowner (1.8) bionic; urgency=medium
 
   * Adding standalone support 
