--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.7.2) bionic; urgency=medium
+
+  * Migrated to python3
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 30 Jan 2020 14:46:37 +0100
+
 lliurex-shutdowner (1.7.1) bionic; urgency=medium
 
   * Gui controls are disabled when launching if cron setting is disabled.
