--- a/lliurex-po/lliurex-shutdowner-common/es.po
+++ b/lliurex-po/lliurex-shutdowner-common/es.po
@@ -1,23 +1,28 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Spanish translations for PACKAGE package
+# Traducciones al español para el paquete PACKAGE.
+# Copyright (C) 2021 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# lliurex <lliurex@gva.es>, 2021.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-04 13:18+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2021-02-17 13:31+0100\n"
+"PO-Revision-Date: 2021-02-17 13:47+0100\n"
+"Last-Translator: lliurex <lliurex@gva.es>\n"
+"Language-Team: Spanish\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 2.3\n"
 
-#: ../lliurex-shutdowner-common.install/usr/sbin/shutdown-lliurex-dialog:22
-#, python-format
-msgid "System will shutdown in %s seconds. Please, save your files."
-msgstr "El sistema se apagará en %s segundos. Por favor, guarda tus ficheros."
+#: ../lliurex-shutdowner-common.install/usr/sbin/shutdown-lliurex-dialog.py:50
+msgid "System will shutdown in a few seconds. Please, save your files"
+msgstr "El sistema se apagará en pocos segundos. Por favor, guarda tus ficheros."
+
+#: ../lliurex-shutdowner-common.install/usr/sbin/shutdown-lliurex-dialog.py:51
+msgid "Cancel shutdown"
+msgstr "Cancelar apagado"
