--- a/lliurex-po/lliurex-shutdowner-common/es_ES.po
+++ b/lliurex-po/lliurex-shutdowner-common/es_ES.po
@@ -9,10 +9,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-17 13:31+0100\n"
-"PO-Revision-Date: 2021-02-17 13:49+0100\n"
+"PO-Revision-Date: 2021-02-17 13:47+0100\n"
 "Last-Translator: lliurex <lliurex@gva.es>\n"
 "Language-Team: Spanish\n"
-"Language: es\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,8 +21,8 @@ msgstr ""
 
 #: ../lliurex-shutdowner-common.install/usr/sbin/shutdown-lliurex-dialog.py:50
 msgid "System will shutdown in a few seconds. Please, save your files"
-msgstr "El sistema s'apagarà en pocs segons. Per favor, guarda els teus fitxers."
+msgstr "El sistema se apagará en pocos segundos. Por favor, guarda tus ficheros."
 
 #: ../lliurex-shutdowner-common.install/usr/sbin/shutdown-lliurex-dialog.py:51
 msgid "Cancel shutdown"
-msgstr "Cancel·la apagat"
+msgstr "Cancelar apagado"
