--- a/lliurex-po/lliurex-shutdowner/es_ES.po
+++ b/lliurex-po/lliurex-shutdowner/es_ES.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2021-02-17 13:44+0100\n"
 "Last-Translator: lliurex <lliurex@gva.es>\n"
 "Language-Team: Spanish\n"
-"Language: es\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -57,7 +57,7 @@ msgstr "Apagar el servidor también (2 minutos después)"
 
 #: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:500
 msgid "Currently detected clients: "
-msgstr "Clientes detectados actualmente:"
+msgstr "Clientes detectados actualmente: "
 
 #: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:525
 msgid "Shutdown clients now"
