--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.8.2) focal; urgency=medium
+
+  * Fixed login panel
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 18 Feb 2021 10:09:24 +0100
+
 lliurex-shutdowner (2.8.1) focal; urgency=medium
 
   * Initial release for focal
