--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.8.3) focal; urgency=medium
+
+  * Fixed login panel
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 18 Feb 2021 10:17:26 +0100
+
 lliurex-shutdowner (2.8.2) focal; urgency=medium
 
   * Fixed login panel
