--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-shutdowner (2.8.4) focal; urgency=medium
+
+  * Improved controls to set hour and minutes
+  * Fixed code
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 22 Feb 2021 08:20:56 +0100
+
 lliurex-shutdowner (2.8.3) focal; urgency=medium
 
   * Fixed login panel
