--- a/lliurex-po/lliurex-shutdowner/es.po
+++ b/lliurex-po/lliurex-shutdowner/es.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-19 11:33+0100\n"
-"PO-Revision-Date: 2021-02-19 11:37+0100\n"
+"POT-Creation-Date: 2021-02-26 10:03+0100\n"
+"PO-Revision-Date: 2021-02-26 10:14+0100\n"
 "Last-Translator: lliurex <lliurex@gva.es>\n"
 "Language-Team: Spanish\n"
 "Language: es\n"
@@ -19,54 +19,106 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 2.3\n"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:91
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:95
 msgid "Loading information. Wait a moment..."
 msgstr "Cargando información. Espere un momento..."
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:147
-msgid "Automatic client shutdown"
-msgstr "Apagado automatico de clientes"
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:141
+msgid "Help"
+msgstr "Ayuda"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:147
-msgid "Automatic shutdown"
-msgstr "Apagado automatico"
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:168
+msgid "The client and server shutdown time are not compatible with each other"
+msgstr "La hora de apagado del cliente y servidor no son compatibles entre si"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:287
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:171
+msgid "The client and server shutdown days are not compatible with each other"
+msgstr ""
+"Los días de apagado del cliente y servidor no son compatibles entre si"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:174
+msgid ""
+"The client and server shutdown time and days are not compatible with each "
+"other"
+msgstr ""
+"La hora y días de apagado del cliente y servidor no son compatibles entre si"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:176
+msgid "Changes saved successfully"
+msgstr "Cambios guardados correctamente"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/Cron.qml:110
 msgid "You can use the mouse wheel to change the hour"
 msgstr "Puede utilizar la rueda del ratón para cambiar la hora"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:320
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/Cron.qml:143
 msgid "You can use the mouse wheel to change the minutes"
 msgstr "Puede utilizar la rueda del ratón para cambiar los minutos"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:346
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/Cron.qml:167
 msgid "Monday"
 msgstr "Lunes"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:373
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/Cron.qml:182
 msgid "Tuesday"
 msgstr "Martes"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:400
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/Cron.qml:197
 msgid "Wednesday"
 msgstr "Miércoles"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:427
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/Cron.qml:212
 msgid "Thursday"
 msgstr "Jueves"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:453
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/Cron.qml:227
 msgid "Friday"
 msgstr "Viernes"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:487
-msgid "Shutdown server as well (2 minutes later)"
-msgstr "Apagar el servidor también (2 minutos después)"
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:37
+msgid "Automatic client shutdown"
+msgstr "Apagado automatico de clientes"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:519
-msgid "Currently detected clients: "
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:37
+msgid "Automatic shutdown"
+msgstr "Apagado automatico"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:122
+msgid "Shutdown server as well:"
+msgstr "Apagar el servidor también:"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:148
+msgid "Click to change server shutdown settings"
+msgstr "Haga clic para cambiar la configuración de apagado del servidor"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:176
+msgid "Currently detected clients:"
 msgstr "Clientes detectados actualmente:"
 
-#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.qml:542
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:197
 msgid "Shutdown clients now"
 msgstr "Apagar clientes ahora"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:212
+msgid "Custom shutdown"
+msgstr "Apagado personalizado"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:214
+msgid "2 minutes after clients"
+msgstr "2 minutos después que los clientes"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ClientOptions.qml:217
+msgid "Not configured"
+msgstr "No configurado"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ServerOptions.qml:39
+msgid "Automatic server shutdown"
+msgstr "Apagado automatico del servidor"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ServerOptions.qml:91
+msgid "Shutdown server 2 minutes after clients)"
+msgstr "Apagar el servidor 2 minutos después que los clientes"
+
+#: ../lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/ServerOptions.qml:108
+msgid "Custom:"
+msgstr "Personalizado:"
