--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.9.2) focal; urgency=medium
+
+  * Added valencian translations
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 10 Mar 2021 15:51:16 +0100
+
 lliurex-shutdowner (2.9.1) focal; urgency=medium
 
   * Fixed close function name
