--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.9.3) focal; urgency=medium
+
+  * Fixed function to detect standalone mode
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 25 May 2021 11:59:08 +0200
+
 lliurex-shutdowner (2.9.2) focal; urgency=medium
 
   * Added valencian translations
